x86/include/TestEngine.h


TESTENGINE_API(int32) teGetVersion(char* versionStr);
TESTENGINE_API(uint32) openTestEngine(int32 transport,
                                      const char* transportDevice, uint32 dataRate,
                                      int32 retryTimeOut, int32 usbTimeOut);
TESTENGINE_API(uint32) openTestEngineUnlock(int32 transport,
                                            const char* transportDevice,
                                            int32 retryTimeOut, int32 usbTimeOut,
                                            const char* unlockKey);
TESTENGINE_API(uint32) openTestEngineDebug(int32 port, int32 multi, int32 transport);
TESTENGINE_API(uint32) openTestEngineDebugUnlock(int32 port, int32 multi,
                                                 int32 transport,
                                                 const char* unlockKey);
TESTENGINE_API(uint32) openTestEngineDebugTrans(const char* trans, int32 multi);
TESTENGINE_API(uint32) openTestEngineDebugUnlockTrans(const char* trans, int32 multi,
                                                      const char* unlockKey);
TESTENGINE_API(int32) closeTestEngine(uint32 handle);
TESTENGINE_API(int32) closeTestEngineEx(uint32 handle, uint16 options);
TESTENGINE_API(uint32) teGetLastError(uint32 handle);
TESTENGINE_API(int32) bccmdSetColdReset(uint32 handle, int32 usbTimeout);
TESTENGINE_API(int32) bccmdSetWarmReset(uint32 handle, int32 usbTimeout);
TESTENGINE_API(int32) radiotestPause(uint32 handle);
TESTENGINE_API(int32) radiotestDeepSleep(uint32 handle);
TESTENGINE_API(int32) radiotestPcmExtLb(uint32 handle, uint16 pcmMode);
TESTENGINE_API(int32) radiotestPcmExtLbIf(uint32 handle, uint16 pcmMode,
                                          uint16 pcmIf);
TESTENGINE_API(int32) radiotestPcmLb(uint32 handle, uint16 pcmMode);
TESTENGINE_API(int32) radiotestPcmLbIf(uint32 handle, uint16 pcmMode, uint16 pcmIf);
TESTENGINE_API(int32) radiotestPcmTimingIn(uint32 handle, uint16 pioOut,
                                           uint16 pcmIn);
TESTENGINE_API(int32) radiotestPcmTimingInIf(uint32 handle, uint16 pioOut,
                                             uint16 pcmIn, uint16 pcmIf);
TESTENGINE_API(int32) radiotestPcmTone(uint32 handle, uint16 freq, uint16 ampl,
                                       uint16 dc);
TESTENGINE_API(int32) radiotestPcmToneIf(uint32 handle, uint16 freq, uint16 ampl,
                                         uint16 dc, uint16 pcmIf);
TESTENGINE_API(int32) radiotestPcmToneStereo(uint32 handle, uint16 freq, uint16 ampl,
                                             uint16 dc, uint16 channel);
TESTENGINE_API(int32) radiotestCtsRtsLb(uint32 handle);
TESTENGINE_API(int32) radiotestRadioStatus(uint32 handle);
TESTENGINE_API(int32) hqGetRadioStatus(uint32 handle, uint16 status[], int32 timeout);
TESTENGINE_API(int32) radiotestRadioStatusArray(uint32 handle);
TESTENGINE_API(int32) hqGetRadioStatusArray(uint32 handle, uint16 status[],
                                            int32 timeout);
TESTENGINE_API(int32) bccmdMemoryGet(uint32 handle, uint16 baseAddr,
                                     uint16 dataLength, uint16 data[]);
TESTENGINE_API(int32) bccmdMemorySet(uint32 handle, uint16 baseAddr,
                                     uint16 dataLength, const uint16 data[]);
TESTENGINE_API(int32) bccmdGetBuildId(uint32 handle, uint16* buildId);
TESTENGINE_API(int32) bccmdBuildName(uint32 handle, char* name, uint16 maxLen,
                                     uint16* length);
TESTENGINE_API(int32) bccmdGetChipVersion(uint32 handle, uint16* chipVer);
TESTENGINE_API(int32) bccmdGetChipRevision(uint32 handle, uint16* chipRev);
TESTENGINE_API(int32) bccmdGetChipAnaVer(uint32 handle, uint8* major, uint8* minor,
                                         uint8* vari);
TESTENGINE_API(int32) bccmdRouteClock(uint32 handle);
TESTENGINE_API(int32) bccmdRssiAcl(uint32 handle, uint16 connectionHandle,
                                   int16* rssi);
TESTENGINE_API(int32) bccmdSetPio(uint32 handle, uint16 mask, uint16 port);
TESTENGINE_API(int32) bccmdGetPio(uint32 handle, uint16* mask, uint16* port);
TESTENGINE_API(int32) bccmdMapPio32(uint32 handle, uint32 mask, uint32 pios,
                                    uint32* errLines);
TESTENGINE_API(int32) bccmdSetPio32(uint32 handle, uint32 mask, uint32 direction,
                                    uint32 value, uint32* errLines);
TESTENGINE_API(int32) bccmdGetPio32(uint32 handle, uint32* direction, uint32* value);
TESTENGINE_API(int32) bccmdGetAdc(uint32 handle, uint16 adc, uint16* result);
TESTENGINE_API(int32) bccmdGetAio(uint32 handle, uint16 aio, uint16* result,
                                  uint8* numBits);
TESTENGINE_API(int32) bccmdBC5MMGetBatteryVoltage(uint32 handle, uint16* voltage);
TESTENGINE_API(int32) bccmdGetFirmwareCheckMask(uint32 handle, uint16* mask);
TESTENGINE_API(int32) bccmdGetFirmwareCheck(uint32 handle, uint16* check);
TESTENGINE_API(int32) bccmdGetExternalClockPeriod(uint32 handle, uint16* period);