x86/include/TestEngineAPI.cs

// TestEngineAPI.cs : Declares the DLL functions for C#.
// Copyright (c) 2022 Qualcomm Technologies International, Ltd.
// All Rights Reserved.
// Qualcomm Technologies International, Ltd. Confidential and Proprietary.

// Auto-generated CS wrapper for TestEngine DLL.
// Created on 2022-11-18 15:48 from TestEngine.h file

using System;
using System.Runtime.InteropServices;
using System.Text;

namespace TestEngineAPI
{
    public class TestEngine
    {
        const CharSet charset = CharSet.Ansi;
        const CallingConvention calling_convention = CallingConvention.StdCall;

        [DllImport("TestEngine.dll", EntryPoint="teGetVersion",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int teGetVersion(StringBuilder versionStr);

        [DllImport("TestEngine.dll", EntryPoint="openTestEngine",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern uint openTestEngine(int transport, String transportDevice, uint dataRate, int retryTimeOut, int usbTimeOut);

        [DllImport("TestEngine.dll", EntryPoint="openTestEngineUnlock",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern uint openTestEngineUnlock(int transport, String transportDevice, int retryTimeOut, int usbTimeOut, String unlockKey);

        [DllImport("TestEngine.dll", EntryPoint="openTestEngineDebug",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern uint openTestEngineDebug(int port, int multi, int transport);

        [DllImport("TestEngine.dll", EntryPoint="openTestEngineDebugUnlock",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern uint openTestEngineDebugUnlock(int port, int multi, int transport, String unlockKey);

        [DllImport("TestEngine.dll", EntryPoint="openTestEngineDebugTrans",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern uint openTestEngineDebugTrans(String trans, int multi);

        [DllImport("TestEngine.dll", EntryPoint="openTestEngineDebugUnlockTrans",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern uint openTestEngineDebugUnlockTrans(String trans, int multi, String unlockKey);

        [DllImport("TestEngine.dll", EntryPoint="closeTestEngine",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int closeTestEngine(uint handle);

        [DllImport("TestEngine.dll", EntryPoint="closeTestEngineEx",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int closeTestEngineEx(uint handle, ushort options);

        [DllImport("TestEngine.dll", EntryPoint="teGetLastError",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern uint teGetLastError(uint handle);

        [DllImport("TestEngine.dll", EntryPoint="bccmdSetColdReset",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int bccmdSetColdReset(uint handle, int usbTimeout);

        [DllImport("TestEngine.dll", EntryPoint="bccmdSetWarmReset",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int bccmdSetWarmReset(uint handle, int usbTimeout);

        [DllImport("TestEngine.dll", EntryPoint="radiotestPause",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int radiotestPause(uint handle);

        [DllImport("TestEngine.dll", EntryPoint="radiotestDeepSleep",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int radiotestDeepSleep(uint handle);

        [DllImport("TestEngine.dll", EntryPoint="radiotestPcmExtLb",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int radiotestPcmExtLb(uint handle, ushort pcmMode);

        [DllImport("TestEngine.dll", EntryPoint="radiotestPcmExtLbIf",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int radiotestPcmExtLbIf(uint handle, ushort pcmMode, ushort pcmIf);

        [DllImport("TestEngine.dll", EntryPoint="radiotestPcmLb",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int radiotestPcmLb(uint handle, ushort pcmMode);

        [DllImport("TestEngine.dll", EntryPoint="radiotestPcmLbIf",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int radiotestPcmLbIf(uint handle, ushort pcmMode, ushort pcmIf);

        [DllImport("TestEngine.dll", EntryPoint="radiotestPcmTimingIn",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int radiotestPcmTimingIn(uint handle, ushort pioOut, ushort pcmIn);

        [DllImport("TestEngine.dll", EntryPoint="radiotestPcmTimingInIf",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int radiotestPcmTimingInIf(uint handle, ushort pioOut, ushort pcmIn, ushort pcmIf);

        [DllImport("TestEngine.dll", EntryPoint="radiotestPcmTone",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int radiotestPcmTone(uint handle, ushort freq, ushort ampl, ushort dc);

        [DllImport("TestEngine.dll", EntryPoint="radiotestPcmToneIf",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int radiotestPcmToneIf(uint handle, ushort freq, ushort ampl, ushort dc, ushort pcmIf);

        [DllImport("TestEngine.dll", EntryPoint="radiotestPcmToneStereo",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int radiotestPcmToneStereo(uint handle, ushort freq, ushort ampl, ushort dc, ushort channel);

        [DllImport("TestEngine.dll", EntryPoint="radiotestCtsRtsLb",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int radiotestCtsRtsLb(uint handle);

        [DllImport("TestEngine.dll", EntryPoint="radiotestRadioStatus",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int radiotestRadioStatus(uint handle);

        [DllImport("TestEngine.dll", EntryPoint="hqGetRadioStatus",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int hqGetRadioStatus(uint handle, ushort [] status, int timeout);

        [DllImport("TestEngine.dll", EntryPoint="radiotestRadioStatusArray",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int radiotestRadioStatusArray(uint handle);

        [DllImport("TestEngine.dll", EntryPoint="hqGetRadioStatusArray",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int hqGetRadioStatusArray(uint handle, ushort [] status, int timeout);

        [DllImport("TestEngine.dll", EntryPoint="bccmdMemoryGet",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int bccmdMemoryGet(uint handle, ushort baseAddr, ushort dataLength, ushort [] data);

        [DllImport("TestEngine.dll", EntryPoint="bccmdMemorySet",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int bccmdMemorySet(uint handle, ushort baseAddr, ushort dataLength, ushort [] data);

        [DllImport("TestEngine.dll", EntryPoint="bccmdGetBuildId",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int bccmdGetBuildId(uint handle, out ushort buildId);

        [DllImport("TestEngine.dll", EntryPoint="bccmdBuildName",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int bccmdBuildName(uint handle, StringBuilder name, ushort maxLen, out ushort length);

        [DllImport("TestEngine.dll", EntryPoint="bccmdGetChipVersion",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int bccmdGetChipVersion(uint handle, out ushort chipVer);

        [DllImport("TestEngine.dll", EntryPoint="bccmdGetChipRevision",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int bccmdGetChipRevision(uint handle, out ushort chipRev);

        [DllImport("TestEngine.dll", EntryPoint="bccmdGetChipAnaVer",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int bccmdGetChipAnaVer(uint handle, out byte major, out byte minor, out byte vari);

        [DllImport("TestEngine.dll", EntryPoint="bccmdRouteClock",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int bccmdRouteClock(uint handle);

        [DllImport("TestEngine.dll", EntryPoint="bccmdRssiAcl",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int bccmdRssiAcl(uint handle, ushort connectionHandle, out short rssi);

        [DllImport("TestEngine.dll", EntryPoint="bccmdSetPio",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int bccmdSetPio(uint handle, ushort mask, ushort port);

        [DllImport("TestEngine.dll", EntryPoint="bccmdGetPio",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int bccmdGetPio(uint handle, out ushort mask, out ushort port);

        [DllImport("TestEngine.dll", EntryPoint="bccmdMapPio32",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int bccmdMapPio32(uint handle, uint mask, uint pios, out uint errLines);

        [DllImport("TestEngine.dll", EntryPoint="bccmdSetPio32",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int bccmdSetPio32(uint handle, uint mask, uint direction, uint value, out uint errLines);

        [DllImport("TestEngine.dll", EntryPoint="bccmdGetPio32",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int bccmdGetPio32(uint handle, out uint direction, out uint value);

        [DllImport("TestEngine.dll", EntryPoint="bccmdGetAdc",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int bccmdGetAdc(uint handle, ushort adc, out ushort result);

        [DllImport("TestEngine.dll", EntryPoint="bccmdGetAio",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int bccmdGetAio(uint handle, ushort aio, out ushort result, out byte numBits);

        [DllImport("TestEngine.dll", EntryPoint="bccmdBC5MMGetBatteryVoltage",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int bccmdBC5MMGetBatteryVoltage(uint handle, out ushort voltage);

        [DllImport("TestEngine.dll", EntryPoint="bccmdGetFirmwareCheckMask",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int bccmdGetFirmwareCheckMask(uint handle, out ushort mask);

        [DllImport("TestEngine.dll", EntryPoint="bccmdGetFirmwareCheck",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int bccmdGetFirmwareCheck(uint handle, out ushort check);

        [DllImport("TestEngine.dll", EntryPoint="bccmdGetExternalClockPeriod",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int bccmdGetExternalClockPeriod(uint handle, out ushort period);
